// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders basic web content resource 1`] = `
<div
  className="asset-entry block resource standard-padding "
>
  <span
    className="resource-badge"
  >
    
  </span>
  <a
    className="element-border font-color no-padding w100"
    href="https://www-dev.liferay.com/-/case-study"
  >
    <div
      className="flex flex-column resource-wrapper-recent resource-wrapper"
    >
      <img
        src="https://www-dev.liferay.comundefined"
      />
      <div
        className="small-caps"
      >
        Case Studies
      </div>
      <p
        className="asset-entry-title"
      >
        Test Title
      </p>
    </div>
  </a>
</div>
`;

exports[`Renders featured document resource 1`] = `
<div
  className="asset-entry block resource standard-padding featured has-resource-badge"
>
  <span
    className="resource-badge"
  >
    Featured
  </span>
  <a
    className="element-border font-color no-padding w100"
    href="https://www-dev.liferay.com/d/12345"
  >
    <div
      className="flex flex-column resource-wrapper-recent resource-wrapper"
    >
      <img
        src="https://www-dev.liferay.com/documents/10182/244411454/test-image.jpg/41687a03-6722-602f-82e9-21d46f0ad060/test-image.jpg?t=1590459595501"
      />
      <div
        className="small-caps"
      >
        Product Info
      </div>
      <p
        className="asset-entry-title"
      >
        Test Featured Title
      </p>
    </div>
  </a>
</div>
`;

exports[`Renders new resource 1`] = `
<div
  className="asset-entry block resource standard-padding  has-resource-badge"
>
  <span
    className="resource-badge"
  >
    New
  </span>
  <a
    className="element-border font-color no-padding w100"
    href=""
  >
    <div
      className="flex flex-column resource-wrapper-recent resource-wrapper"
    >
      <img
        src="https://www-dev.liferay.comundefined"
      />
      <div
        className="small-caps"
      >
        Migration Guides
      </div>
      <p
        className="asset-entry-title"
      >
        Test New Title
      </p>
    </div>
  </a>
</div>
`;
